--- a/br-ext-chip-ingenic/configs/t31_lite_defconfig
+++ b/br-ext-chip-ingenic/configs/t31_lite_defconfig
@@ -37,7 +37,7 @@ BR2_LINUX_KERNEL_LZMA=y
 BR2_OPENIPC_SOC_VENDOR="ingenic"
 BR2_OPENIPC_SOC_MODEL="t31"
 BR2_OPENIPC_SOC_FAMILY="t31"
-BR2_OPENIPC_SNS_MODEL=""
+BR2_OPENIPC_SNS_MODEL="sc401ai"
 BR2_OPENIPC_VARIANT="lite"
 BR2_OPENIPC_FLASH_SIZE="8"
 
@@ -102,7 +102,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_PACKAGE_LINUX_FIRMWARE_OPENIPC=y
 BR2_PACKAGE_LINUX_FIRMWARE_OPENIPC_MEDIATEK_MT7601U=y
 # BR2_PACKAGE_RTL8188EU is not set
-
+BR2_PACKAGE_RTL8188FU_OPENIPC=y
 # WIREGUARD
 BR2_PACKAGE_WIREGUARD_LINUX_COMPAT=y
 BR2_PACKAGE_WIREGUARD_TOOLS=y
