--- a/br-ext-chip-ingenic/configs/t31_ultimate_defconfig
+++ b/br-ext-chip-ingenic/configs/t31_ultimate_defconfig
@@ -37,7 +37,7 @@ BR2_LINUX_KERNEL_LZMA=y
 BR2_OPENIPC_SOC_VENDOR="ingenic"
 BR2_OPENIPC_SOC_MODEL="t31"
 BR2_OPENIPC_SOC_FAMILY="t31"
-BR2_OPENIPC_SNS_MODEL=""
+BR2_OPENIPC_SNS_MODEL="sc401ai"
 BR2_OPENIPC_VARIANT="ultimate"
 BR2_OPENIPC_FLASH_SIZE="16"
 
@@ -103,14 +103,14 @@ BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_PACKAGE_LINUX_FIRMWARE_OPENIPC=y
 BR2_PACKAGE_LINUX_FIRMWARE_OPENIPC_MEDIATEK_MT7601U=y
-BR2_PACKAGE_ATBM60XX=y
+#BR2_PACKAGE_ATBM60XX=y
 # BR2_PACKAGE_ATBM60XX_MODEL_601X is not set
 # BR2_PACKAGE_ATBM60XX_MODEL_602X is not set
-BR2_PACKAGE_ATBM60XX_MODEL_603X=y
+#BR2_PACKAGE_ATBM60XX_MODEL_603X=y
 # BR2_PACKAGE_ATBM60XX_MODEL_6041 is not set
-BR2_PACKAGE_ATBM60XX_INTERFACE_SDIO=y
+#BR2_PACKAGE_ATBM60XX_INTERFACE_SDIO=y
 # BR2_PACKAGE_ATBM60XX_INTERFACE_USB is not set
-BR2_PACKAGE_RTL8189FS_OPENIPC=y
+BR2_PACKAGE_RTL8188FU_OPENIPC=y
 # BR2_PACKAGE_RTL8188EU is not set
 
 # WIREGUARD
